docs/grammar-improved.txt
// Top being the lowest precedence; bottom being the highest precedence.

expression  -> equality ;
equality    -> comparison ( ( "!=" | "==" ) comparison)* ;
comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term        -> factor ( ( "-" | "+" ) factor )* ;
factor      -> unary ( ( "/" | "*" ) unary )* ;
unary       -> ( "!" | "-" ) unary | primary ;
primary     -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" ;
